<resources>
    <string name="app_name" translatable="false">YouthSongs</string>
    <string name="search">Search</string>
    <string name="settingsLabel">Settings</string>
    <string name="featuredLabel">Featured</string>
    <string name="homeLabel">Home</string>
    <string name="songName">Song name</string>
    <string name="songNumber" translatable="false">999</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="song_text">Song text</string>
    <string name="emptyFavLabel">You have no favorite songs</string>
    <string name="textSample" translatable="false">Aa</string>
    <string name="smallLabel">Small</string>
    <string name="mediumLabel">Medium</string>
    <string name="largeLabel">Large</string>
    <string name="java_engineer">Java engineer</string>
    <string name="aboutAppDesc">Application with youth songs. Created for the youth of the church of Severodonetsk. Version: version.</string>
    <string name="nikita_name">Nikita Lapin</string>
    <string name="me_in_social_net">Where you can find me</string>
    <string name="subscribe_to_our_telegram_channel">Subscribe to our telegram channel</string>
    <string name="show_chords">Show chords</string>
    <string name="songNumberTransition" translatable="false">songNumberTransition</string>
    <string name="songNameTransitions" translatable="false">songNameTransitions</string>
    <string name="aboutAppTransition" translatable="false">aboutAppTransition</string>
    <string name="mistake_in_the_text">Mistake in the text</string>
    <string name="share">Share</string>
    <string name="mistake_message_body">Mistake in the song by number - %d. Details:</string>
    <string name="is_chords_show_pref" translatable="false">is_chords_show</string>
    <string name="font_size_pref" translatable="false">font_size</string>
    <string name="show_chords_label">Show chords</string>
    <string name="font_size_label">Font size</string>
    <string name="font_label">Font</string>
    <string name="chords_label">Chords</string>
    <string name="all_songs">All songs</string>
    <string name="title_activity_appearance_settings">Appearance</string>
    <string name="last_update_pref">last_update_time</string>
    <string name="last_update_label">Last update was: %s</string>
</resources>
