<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context="com.nlapin.youthsongs.ui.AppAboutFragment">

    <TextView
        android:id="@+id/appNameLabel"
        style="@style/wideStyle"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:transitionName="@string/aboutAppTransition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/aboutAppTV"
        style="@style/wideStyle"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/aboutAppDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appNameLabel" />

    <ImageView
        android:id="@+id/telegramBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:elevation="15dp"
        android:padding="5dp"
        android:src="@drawable/ic_telegram"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutAppTV" />

    <TextView
        android:id="@+id/telegramDescTV"
        style="@style/wrapStyle"
        android:layout_marginStart="20dp"
        android:text="@string/subscribe_to_our_telegram_channel"
        app:layout_constraintBottom_toBottomOf="@id/telegramBtn"
        app:layout_constraintStart_toEndOf="@id/telegramBtn"
        app:layout_constraintTop_toTopOf="@id/telegramBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>
