<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:background="@color/primaryColor"

    android:paddingEnd="20dp"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/textSizeLabel"
        style="@style/wrapStyle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:text="Text Size"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/textSizeRG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/control_switch_bg_border"
        android:checkedButton="@+id/textSizeMedium"
        android:divider="@color/colorChecked"
        android:elevation="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSizeLabel">

        <RadioButton
            android:id="@+id/textSizeSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:background="@drawable/control_switch_bg_selector_middle"
            android:button="@null"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/smallLabel"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/textSizeMedium"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:background="@drawable/control_switch_bg_selector_middle"
            android:button="@null"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/mediumLabel"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/textSizeLarge"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:background="@drawable/control_switch_bg_selector"
            android:button="@null"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/largeLabel"
            android:textColor="@android:color/white" />
    </RadioGroup>

    <TextView
        android:id="@+id/textSizeDemo"
        style="@style/wrapStyle"
        android:layout_marginTop="20dp"
        android:text="Будь прославлений, як рясний плід дає земля,
Як в достатку тече ріка, будь прославлений."
        android:textSize="15sp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSizeRG" />



    <Button
        android:id="@+id/aboutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext_bg"
        android:elevation="10dp"
        android:fontFamily="@font/montserrat_bold"
        android:padding="10dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="About App"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/aboutBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSizeDemo"
        app:layout_constraintVertical_bias="0.116" />

</androidx.constraintlayout.widget.ConstraintLayout>